adding txt for noe

--- a/pages/bw.html
+++ b/pages/bw.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>black and white </h1>
+    <h1>black and white Images will loading soon </h1>
 </body>
 </html>
