--- a/pages/memory.html
+++ b/pages/memory.html
@@ -6,6 +6,6 @@
     <title>Memory</title>
 </head>
 <body>
-    <h1>welcome to memory</h1>
+    <h1>welcome to memory section.</h1>
 </body>
 </html>
