--- a/pages/home.html
+++ b/pages/home.html
@@ -142,13 +142,13 @@
                     </div>
                     <div class="col-md-4">
                         <h4>Contact Us</h4>
-                        <p>Email: example@example.com<br>Phone: +1234567890</p>
+                        <p>Email: bonnalabonnokhan2708@gmail.com<br>Phone: 01689763403</p>
                     </div>
                     <div class="col-md-4">
                         <h4>Follow Us</h4>
                         <ul class="list-inline">
                             <li class="list-inline-item"><a href="#">Labonno khan Bonna<i class="fab fa-facebook"></i></a></li>
-                            <li class="list-inline-item"><a href="#"><i class="fab fa-twitter"></i></a></li>
+                            <li class="list-inline-item"><a href="#">Mohammad Nabil Hossain<i class="fab fa-twitter"></i></a></li>
                             <li class="list-inline-item"><a href="#"><i class="fab fa-instagram"></i></a></li>
                         </ul>
                     </div>
