--- a/pages/index.html
+++ b/pages/index.html
@@ -14,7 +14,7 @@
         <h1>Happy birthday</h1>
         <nav class="nav">
             <ul class="nav-link d-flex justify-content-evenly  ">
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="university.html">university</a></li>
                 <li><a href="engagement.html">engagement</a></li>
                
